[tool.poetry]
name = "DARKLib"
version = "0.1.0"
description = "Python library for the DARK polynomial commitment scheme"
authors = ["Benedikt Buenz <benedikt@cs.stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gmpy2 = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
